// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories <CardRender /> Completed category (finished quiz) should match snapshot 1`] = `
<button
  class="sc-bdfBwQ sc-dlfnbm fXSvCp kqmOmX"
  data-testid="category-card"
  disabled=""
>
  <div
    class="sc-eCssSg buUjKq"
  >
    <span>
      /
    </span>
    <span
      class="category-card__link"
    >
      see report
    </span>
  </div>
  <h2
    class="sc-hKgILt bGdgqX"
  >
    Books
  </h2>
</button>
`;

exports[`Categories <CardRender /> In progress category (quiz have been started) should match snapshot 1`] = `
<button
  class="sc-bdfBwQ sc-dlfnbm fXSvCp kqmOmX"
  data-testid="category-card"
  disabled=""
>
  <div
    class="sc-eCssSg buUjKq"
  >
    <div
      class="sc-jSgupP ckQriu progress-bar"
      data-testid="progress-bar"
    >
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
      <span
        class="sc-gKsewC tNizw  "
      />
    </div>
    <span
      class="category-card__link"
    >
      continue
    </span>
  </div>
  <h2
    class="sc-hKgILt bGdgqX"
  >
    Books
  </h2>
</button>
`;

exports[`Categories <CardRender /> New category (quiz not started) should match snapshot 1`] = `
<button
  class="sc-bdfBwQ sc-dlfnbm fXSvCp ggkRDd"
  data-testid="category-card"
>
  <h2
    class="sc-hKgILt jzEWCa"
  >
    Books
  </h2>
</button>
`;
